support "Any CPU" Mode

--- a/src/Samples/Vlc.DotNet.Forms.Samples/Vlc.DotNet.Forms.Samples - CLR 2 - .Net 2.0.csproj
+++ b/src/Samples/Vlc.DotNet.Forms.Samples/Vlc.DotNet.Forms.Samples - CLR 2 - .Net 2.0.csproj
@@ -50,6 +50,17 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\..\build\Vlc.DotNet.Forms.Samples\Debug - x64 - x86 - .Net 2.0\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;CLR2;NET20</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\..\build\Vlc.DotNet.Forms.Samples\Release - x64 - x86 - .Net 2.0\</OutputPath>
+    <DefineConstants>TRACE;CLR2;NET20</DefineConstants>
+    <Optimize>true</Optimize>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
