--- a/src/Samples/Vlc.DotNet.Forms.Samples/Vlc.DotNet.Forms.Samples - CLR 4 - .Net 4.0.csproj
+++ b/src/Samples/Vlc.DotNet.Forms.Samples/Vlc.DotNet.Forms.Samples - CLR 4 - .Net 4.0.csproj
@@ -50,6 +50,18 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\..\build\Vlc.DotNet.Forms.Samples\Debug - x64 - x86 - .Net 4.0\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;CLR4;NET40</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\..\build\Vlc.DotNet.Forms.Samples\Release - x64 -x86 - .Net 4.0\</OutputPath>
+    <DefineConstants>TRACE;CLR4;NET40</DefineConstants>
+    <Optimize>true</Optimize>
+    <WarningLevel>3</WarningLevel>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
