--- a/src/Samples/Vlc.DotNet.Forms.Samples/Vlc.DotNet.Forms.Samples - CLR 4 - .Net 4.5.csproj
+++ b/src/Samples/Vlc.DotNet.Forms.Samples/Vlc.DotNet.Forms.Samples - CLR 4 - .Net 4.5.csproj
@@ -52,6 +52,19 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\..\build\Vlc.DotNet.Forms.Samples\Debug - x64 - x86 - .Net 4.5\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;CLR4;NET45</DefineConstants>
+    <Prefer32Bit>false</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\..\build\Vlc.DotNet.Forms.Samples\Release - x64 - x86 - .Net 4.5\</OutputPath>
+    <DefineConstants>TRACE;CLR4;NET45</DefineConstants>
+    <Optimize>true</Optimize>
+    <Prefer32Bit>false</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
