--- a/src/Samples/Vlc.DotNet.Wpf.Samples/Vlc.DotNet.Wpf.Samples - CLR 4 - .Net 4.5.csproj
+++ b/src/Samples/Vlc.DotNet.Wpf.Samples/Vlc.DotNet.Wpf.Samples - CLR 4 - .Net 4.5.csproj
@@ -56,6 +56,21 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\..\build\Vlc.DotNet.Wpf.Samples\Debug - x64 - x86 - .Net 4.5\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;CLR2;NET35</DefineConstants>
+    <DocumentationFile>
+    </DocumentationFile>
+    <Prefer32Bit>false</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\..\build\Vlc.DotNet.Wpf.Samples\Release - x64 - x86 - .Net 4.5\</OutputPath>
+    <Prefer32Bit>false</Prefer32Bit>
+    <DefineConstants>TRACE;CLR2;NET35</DefineConstants>
+    <Optimize>true</Optimize>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
