--- a/src/Samples/Vlc.DotNet.Wpf.Samples/Vlc.DotNet.Wpf.Samples - CLR 2 - .Net 3.5.csproj
+++ b/src/Samples/Vlc.DotNet.Wpf.Samples/Vlc.DotNet.Wpf.Samples - CLR 2 - .Net 3.5.csproj
@@ -51,6 +51,17 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\..\build\Vlc.DotNet.Wpf.Samples\Debug - x64 - x86 - .Net 3.5\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;CLR2;NET35</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\..\build\Vlc.DotNet.Wpf.Samples\Release - x64 - x86 - .Net 3.5\</OutputPath>
+    <DefineConstants>TRACE;CLR2;NET35</DefineConstants>
+    <Optimize>true</Optimize>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
