--- a/src/Vlc.DotNet.Core.Interops/Vlc.DotNet.Core.Interops - CLR 2 - .Net 2.0.csproj
+++ b/src/Vlc.DotNet.Core.Interops/Vlc.DotNet.Core.Interops - CLR 2 - .Net 2.0.csproj
@@ -58,6 +58,19 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <DocumentationFile>..\..\build\Vlc.DotNet.Core.Interops\Release - x86 - .Net 2.0\Vlc.DotNet.Core.Interops.XML</DocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\build\Vlc.DotNet.Core.Interops\Debug - x64 - x86 - .Net 2.0\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;CLR2;NET20</DefineConstants>
+    <DocumentationFile>..\..\build\Vlc.DotNet.Core.Interops\Debug - x64 - x86 - .Net 2.0\Vlc.DotNet.Core.Interops.xml</DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\build\Vlc.DotNet.Core.Interops\Release - x64 - x86 - .Net 2.0\</OutputPath>
+    <DefineConstants>TRACE;CLR2;NET20</DefineConstants>
+    <Optimize>true</Optimize>
+    <DocumentationFile>..\..\build\Vlc.DotNet.Core.Interops\Release - x64 - x86 - .Net 2.0\Vlc.DotNet.Core.Interops.xml</DocumentationFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
