--- a/src/Vlc.DotNet.Core/Vlc.DotNet.Core - CLR 2 - .Net 3.5.csproj
+++ b/src/Vlc.DotNet.Core/Vlc.DotNet.Core - CLR 2 - .Net 3.5.csproj
@@ -59,6 +59,19 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <DocumentationFile>..\..\build\Vlc.DotNet.Core\Release - x86 - .Net 3.5\Vlc.DotNet.Core.XML</DocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\build\Vlc.DotNet.Core\Debug - x64 - x86 - .Net 3.5\</OutputPath>
+    <DocumentationFile>..\..\build\Vlc.DotNet.Core\Debug - x64 - x86 - .Net 3.5\Vlc.DotNet.Core.xml</DocumentationFile>
+    <DefineConstants>TRACE;DEBUG;CLR2;NET35</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\build\Vlc.DotNet.Core\Release - x64 - x86 - .Net 3.5\</OutputPath>
+    <DefineConstants>TRACE;CLR2;NET35</DefineConstants>
+    <Optimize>true</Optimize>
+    <DocumentationFile>..\..\build\Vlc.DotNet.Core\Release - x64 - x86 - .Net 3.5\Vlc.DotNet.Core.xml</DocumentationFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Windows.Forms" />
