--- a/src/Vlc.DotNet.Forms/Vlc.DotNet.Forms - CLR 2 - .Net 2.0.csproj
+++ b/src/Vlc.DotNet.Forms/Vlc.DotNet.Forms - CLR 2 - .Net 2.0.csproj
@@ -58,6 +58,20 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <DocumentationFile>..\..\build\Vlc.DotNet.Forms\Release - x86 - .Net 2.0\Vlc.DotNet.Forms.XML</DocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\build\Vlc.DotNet.Forms\Debug - x64 - x86 - .Net 2.0\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;CLR2;NET20</DefineConstants>
+    <DocumentationFile>..\..\build\Vlc.DotNet.Forms\Debug - x64 - x86 - .Net 2.0\Vlc.DotNet.Forms.xml</DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\build\Vlc.DotNet.Forms\Release - x64 - x86 - .Net 2.0\</OutputPath>
+    <DefineConstants>TRACE;CLR2;NET20</DefineConstants>
+    <Optimize>true</Optimize>
+    <RegisterForComInterop>false</RegisterForComInterop>
+    <DocumentationFile>..\..\build\Vlc.DotNet.Forms\Release - x64 - x86 - .Net 2.0\Vlc.DotNet.Forms.xml</DocumentationFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
