--- a/src/Vlc.DotNet.Forms/Vlc.DotNet.Forms - CLR 4 - .Net 4.0.csproj
+++ b/src/Vlc.DotNet.Forms/Vlc.DotNet.Forms - CLR 4 - .Net 4.0.csproj
@@ -59,6 +59,19 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <DocumentationFile>..\..\build\Vlc.DotNet.Forms\Release - x86 - .Net 4.0\Vlc.DotNet.Forms.XML</DocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\build\Vlc.DotNet.Forms\Debug - x64 - x86 - .Net 4.0\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;CLR4;NET40</DefineConstants>
+    <DocumentationFile>..\..\build\Vlc.DotNet.Forms\Debug - x64 - x86 - .Net 4.0\Vlc.DotNet.Forms.xml</DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\build\Vlc.DotNet.Forms\Release - x64 - x86 - .Net 4.0\</OutputPath>
+    <DefineConstants>TRACE;CLR4;NET40</DefineConstants>
+    <Optimize>true</Optimize>
+    <DocumentationFile>..\..\build\Vlc.DotNet.Forms\Release - x64 - x86 - .Net 4.0\Vlc.DotNet.Forms.xml</DocumentationFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
