--- a/src/Vlc.DotNet.Wpf/Vlc.DotNet.Wpf - CLR 2 - .Net 3.5.csproj
+++ b/src/Vlc.DotNet.Wpf/Vlc.DotNet.Wpf - CLR 2 - .Net 3.5.csproj
@@ -58,6 +58,19 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <DocumentationFile>..\..\build\Vlc.DotNet.Wpf\Release - x86 - .Net 3.5\Vlc.DotNet.Wpf.XML</DocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\build\Vlc.DotNet.Wpf\Debug - x64 - x86 - .Net 3.5\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;CLR2;NET35</DefineConstants>
+    <DocumentationFile>..\..\build\Vlc.DotNet.Wpf\Debug - x64 - x86 - .Net 3.5\Vlc.DotNet.Wpf.xml</DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>..\..\build\Vlc.DotNet.Wpf\Release - x64 - x86 - .Net 3.5\</OutputPath>
+    <DefineConstants>TRACE;CLR2;NET35</DefineConstants>
+    <Optimize>true</Optimize>
+    <DocumentationFile>..\..\build\Vlc.DotNet.Wpf\Release - x64 - x86 - .Net 3.5\Vlc.DotNet.Wpf.xml</DocumentationFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
